# shortcut-pd

./: README.md
fw/: CMakeLists.txt
fw/src/: app.cpp  app.h  main.cpp  main.h
fw/src/drivers/: 74hc595.cpp  74hc595.h  keyboard.cpp  keyboard.h  spi.cpp  spi.h  w25qxx.h
fw/src/drivers/usbd/: cdc.cpp  cdc.h  desc.cpp  hid.cpp  hid.h  hid_kc.h  usbd.cpp  usbd.h
fw/src/timers/: timer.h
hw/lower/: Keyboard.kicad_sym  RP2040.kicad_sch  RP2040_UPAD.kicad_pcb  RP2040_UPAD.kicad_prl  RP2040_UPAD.kicad_pro  RP2040_UPAD.kicad_sch  USB.kicad_sch  USBHUB.kicad_sch
hw/upper/: RP2040_UPAD_UP.kicad_pcb  RP2040_UPAD_UP.kicad_pro  RP2040_UPAD_UP.kicad_sch
